--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,8 @@ plugins:
 author:
   name   : "Jaki Chowdhury"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "I received my Ph.D. in Mathematics from University of Illinois at Urbana-Champaign, and my B.S. degree 
+  with major in Mathematics and minor in Computer Science from Minnesota State University."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
